# nfcsim

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/: CSV.h  FFT.h  assert.h  config.h  demod.h  list.h  logging.h  nfcsig.h  nfcsim.h  scatter.h
prog/: avgSpectre.c  nfcsim.c  test_fft.c
src/: CSV.c  FFT.c  demod.c  list.c  logging.c  nfcsig.c  scatter.c
